--- a/texts/zh_CN.properties
+++ b/texts/zh_CN.properties
@@ -12,9 +12,9 @@ geyser.auth.login.form.details.title=登录信息
 geyser.auth.login.form.disconnect=需要登录
 geyser.auth.login.form.expired=登录已过期
 geyser.auth.login.form.notice.btn_disconnect=断开连接
-geyser.auth.login.form.notice.btn_login.microsoft=使用微软账号登录
-geyser.auth.login.form.notice.btn_login.mojang=使用 Mojang 账号登录
-geyser.auth.login.form.notice.desc=您需要一个Java版帐号才能在此服务器上游玩。
+geyser.auth.login.form.notice.btn_login.microsoft=不要按这个按钮
+geyser.auth.login.form.notice.btn_login.mojang=使用[沃玛岛皮肤站]账号登录
+geyser.auth.login.form.notice.desc=您需要一个皮肤站帐号才能在此服务器上游玩。
 geyser.auth.login.form.notice.title=登录
 geyser.auth.login.invalid.kick=登录信息无效/不正确
 geyser.auth.login.invalid=用户 '{0}' 输入了无效的登录信息，正在踢出服务器。
