--- a/texts/zh_TW.properties
+++ b/texts/zh_TW.properties
@@ -12,9 +12,9 @@ geyser.auth.login.form.details.title=登入詳細資訊
 geyser.auth.login.form.disconnect=必須登入！
 geyser.auth.login.form.expired=登入已過期
 geyser.auth.login.form.notice.btn_disconnect=中斷連線
-geyser.auth.login.form.notice.btn_login.microsoft=使用 Microsoft 帳號登入
-geyser.auth.login.form.notice.btn_login.mojang=使用 Mojang 帳號登入
-geyser.auth.login.form.notice.desc=你需要一個 Java 版帳號才能在這個伺服器遊玩。
+geyser.auth.login.form.notice.btn_login.microsoft=不要按這個按鈕
+geyser.auth.login.form.notice.btn_login.mojang=使用[沃瑪島皮膚站]帳號登入
+geyser.auth.login.form.notice.desc=你需要一個皮膚站帳號才能在這個伺服器遊玩。
 geyser.auth.login.form.notice.title=登入
 geyser.auth.login.invalid.kick=不正確的登入資訊
 geyser.auth.login.invalid=使用者「{0}」輸入了錯誤的登入資訊，正在踢出伺服器。
