--- a/texts/zh_TW.properties
+++ b/texts/zh_TW.properties
@@ -12,14 +12,14 @@ geyser.auth.login.form.details.title=登入詳細資訊
 geyser.auth.login.form.disconnect=必須登入！
 geyser.auth.login.form.expired=登入已過期
 geyser.auth.login.form.notice.btn_disconnect=中斷連線
-geyser.auth.login.form.notice.btn_login.microsoft=使用 Microsoft 帳號登入
-geyser.auth.login.form.notice.btn_login.mojang=使用 Mojang 帳號登入
-geyser.auth.login.form.notice.desc=你需要一個 Java 版帳號才能在這個伺服器遊玩。
+geyser.auth.login.form.notice.btn_login.microsoft=總之不要點這個按鈕~
+geyser.auth.login.form.notice.btn_login.mojang=使用[皮膚站]帳號登入
+geyser.auth.login.form.notice.desc=你需要一個皮膚站帳號才能在這個伺服器遊玩。
 geyser.auth.login.form.notice.title=登入
 geyser.auth.login.invalid.kick=不正確的登入資訊
 geyser.auth.login.invalid=使用者「{0}」輸入了錯誤的登入資訊，正在踢出伺服器。
 geyser.auth.login.save_token.expired=你的 Java 版憑證已過期或不再有效。你必須重新使用 Microsoft 進行驗證，你的憑證將會重新儲存。
-geyser.auth.login.save_token.warning=&c注意：&r你的 Java 版帳號資訊已被列出並儲存在這個 Geyser 實例上。任何有權存取這個 Geyser 實例的人將可以在未經你的許可下登入你的帳號。
+geyser.auth.login.save_token.warning=&c注意：&r你的皮膚站帳號資訊已被列出並儲存在這個 Geyser 實例上。任何有權存取這個 Geyser 實例的人將可以在未經你的許可下登入你的帳號。
 geyser.auth.login.save_token.proceed=請只在你是這個 Geyser 實例的擁有者，或使用你的帳號來信任該實例的擁有者時才繼續。
 geyser.auth.login.timeout=如果你中斷連線，你在登入時會有 {0} 秒來重新加入。
 geyser.auth.login.wait=請你稍後直到成功登入……
