--- a/texts/en_US.properties
+++ b/texts/en_US.properties
@@ -12,9 +12,9 @@ geyser.auth.login.form.details.title=Login Details
 geyser.auth.login.form.disconnect=Login is required
 geyser.auth.login.form.expired=Login Expired
 geyser.auth.login.form.notice.btn_disconnect=Disconnect
-geyser.auth.login.form.notice.btn_login.microsoft=Log in with a Microsoft account
-geyser.auth.login.form.notice.btn_login.mojang=Log in with a Mojang account
-geyser.auth.login.form.notice.desc=You need a Java Edition account to play on this server.
+geyser.auth.login.form.notice.btn_login.microsoft=In short, don't press this button~
+geyser.auth.login.form.notice.btn_login.mojang=Log in with a [Skins Server] account
+geyser.auth.login.form.notice.desc=You need a Skins Server account to play on this server.
 geyser.auth.login.form.notice.title=Login
 geyser.auth.login.invalid.kick=Invalid/incorrect login info
 geyser.auth.login.invalid=User \'{0}\' entered invalid login info, kicking.
